--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="js/script.js"></script>
-    <title>Gun Shooter Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Car Drifting Game</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
 </head>
-
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/Gun-Shoot-Game-using-HTML-javaScript/">Gun Shooter Game</a>
-        <a class="btn btn-outline-light" href="https://github.com/chetanguptamrt/Gun-Shoot-Game-using-HTML-javaScript"
-            target="_blank">Source code</a>
-    </nav>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/cannon-es@0.18.0/dist/cannon-es.min.js"></script>
+  <script src="Car-Controller-Threejs/dist/CarController.js"></script>
+  <script>
+    let scene, camera, renderer, car, clock, world, carController;
 
-    <div class="container-md mt-4 mb-2">
-        <div class="row">
-            <div id="canvas" class="col-12 canvas">
-                <!-- <div class="ballon-green ballon">
-                    <div class="dhaga"></div>
-                </div> -->
-            </div>
-        </div>
-    </div>
-    <div class="text-center">
-        <p class="m-0 p-0 text-success">Enjoy the game</p>
-        <p class="text-danger">Note: Use PC & Mouse for Better Experience</p>
-    </div>
-    <footer class="bg-dark text-center p-2">
-        <p class="p-0 m-0">Copyright &copy; 2021 Chetan Gupta<br/>All right reserved</p>
-    </footer>
+    function init() {
+      // Create a Three.js scene
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x87CEEB); // Sky color
 
+      // Set up camera
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 10, 20);
+      camera.lookAt(0, 5, 0);
+
+      // Set up renderer
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      // Create a ground plane
+      const groundGeometry = new THREE.PlaneGeometry(100, 100);
+      const groundMaterial = new THREE.MeshBasicMaterial({ color: 0x228B22, side: THREE.DoubleSide });
+      const ground = new THREE.Mesh(groundGeometry, groundMaterial);
+      ground.rotation.x = -Math.PI / 2;
+      scene.add(ground);
+
+      // Set up Cannon.js world
+      world = new CANNON.World();
+      world.gravity.set(0, -9.82, 0);
+      
+      // Set up car controller
+      carController = new CarController(world);
+      car = carController.getCar();
+
+      // Clock to manage animations
+      clock = new THREE.Clock();
+
+      // Start the game loop
+      animate();
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+
+      // Update car physics
+      const delta = clock.getDelta();
+      carController.update(delta);
+
+      // Render the scene
+      renderer.render(scene, camera);
+    }
+
+    // Handle window resizing
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    init();
+  </script>
 </body>
-
 </html>
