--- a/index.html
+++ b/index.html
@@ -12,66 +12,7 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/cannon-es@0.18.0/dist/cannon-es.min.js"></script>
-  <script src="Car-Controller-Threejs/dist/CarController.js"></script>
-  <script>
-    let scene, camera, renderer, car, clock, world, carController;
-
-    function init() {
-      // Create a Three.js scene
-      scene = new THREE.Scene();
-      scene.background = new THREE.Color(0x87CEEB); // Sky color
-
-      // Set up camera
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 10, 20);
-      camera.lookAt(0, 5, 0);
-
-      // Set up renderer
-      renderer = new THREE.WebGLRenderer();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
-      // Create a ground plane
-      const groundGeometry = new THREE.PlaneGeometry(100, 100);
-      const groundMaterial = new THREE.MeshBasicMaterial({ color: 0x228B22, side: THREE.DoubleSide });
-      const ground = new THREE.Mesh(groundGeometry, groundMaterial);
-      ground.rotation.x = -Math.PI / 2;
-      scene.add(ground);
-
-      // Set up Cannon.js world
-      world = new CANNON.World();
-      world.gravity.set(0, -9.82, 0);
-      
-      // Set up car controller
-      carController = new CarController(world);
-      car = carController.getCar();
-
-      // Clock to manage animations
-      clock = new THREE.Clock();
-
-      // Start the game loop
-      animate();
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-
-      // Update car physics
-      const delta = clock.getDelta();
-      carController.update(delta);
-
-      // Render the scene
-      renderer.render(scene, camera);
-    }
-
-    // Handle window resizing
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-
-    init();
-  </script>
+  <script src="js/car-controller.js"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
